improved new features

--- a/products/index.html
+++ b/products/index.html
@@ -6,7 +6,7 @@
     <title>Gas Products | RonVick Gas Service Limited</title>
     <meta name="description" content="Browse our wide selection of gas cylinders and accessories at RonVick Gas Service Limited. Free delivery in Kasana Luwero.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/assets/css/products.css">
+    <link rel="stylesheet" href="../assets/css/products.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -34,17 +34,17 @@
     <header class="header">
         <div class="container">
             <nav class="navbar">
-                <a href="index.html" class="logo">
+                <a href="../index.html" class="logo">
                     <i class="fas fa-fire"></i>
                     <span>RonVick Gas</span>
                 </a>
                 
                 <div class="nav-links" id="navLinks">
-                    <a href="index.html">Home</a>
-                    <a href="products.html" class="active">Products</a>
-                    <a href="services.html">Services</a>
-                    <a href="about.html">About</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="../index.html">Home</a>
+                    <a href="../products/index.html" class="active">Products</a>
+                    <a href="../services.html">Services</a>
+                    <a href="../about.html">About</a>
+                    <a href="../about.html">Contact</a>
                     <div class="mobile-contact">
                         <a href="tel:0788971271"><i class="fas fa-phone"></i> 0788971271</a>
                         <a href="tel:0776511012"><i class="fas fa-phone"></i> 0776511012</a>
@@ -74,7 +74,7 @@
             <div class="page-header">
                 <h1>Our Gas Products</h1>
                 <div class="breadcrumb">
-                    <a href="index.html">Home</a>
+                    <a href="../index.html">Home</a>
                     <span>/</span>
                     <span>Products</span>
                 </div>
