--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Premium Gas Cylinders & Accessories | RonVick Gas Service Limited</title>
     <meta name="description" content="RonVick Gas Service Limited - Your trusted provider of high-quality gas cylinders and accessories in Kasana Luwero. Free delivery on gas cylinders.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/assets/css/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
     <header class="header">
         <div class="container">
             <nav class="navbar">
-                <a href="index.html" class="logo">
+                <a href="./index.html" class="logo">
                     <i class="fas fa-fire"></i>
                     <span>RonVick Gas</span>
                 </a>
