made a couple of changes

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="categories-grid">
                 <a href="products.html#lpg" class="category-card">
                     <div class="category-img">
-                        <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="LPG Cylinders">
+                        <img src="./assets/images/cooking gas 7.jpg" alt="LPG Cylinders">
                     </div>
                     <h3>LPG Cylinders</h3>
                     <p>Various sizes for home and commercial use</p>
@@ -159,7 +159,7 @@
                 </a>
                 <a href="products.html#oxygen" class="category-card">
                     <div class="category-img">
-                        <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Oxygen Cylinders">
+                        <img src="./assets/images/cooking gas 8.jpg" alt="Oxygen Cylinders">
                     </div>
                     <h3>Oxygen Cylinders</h3>
                     <p>Medical and industrial oxygen solutions</p>
@@ -167,7 +167,7 @@
                 </a>
                 <a href="products.html#accessories" class="category-card">
                     <div class="category-img">
-                        <img src="https://images.unsplash.com/photo-1611273426858-450d0e7b9b0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Accessories">
+                        <img src="./assets/images/product4.jpg" alt="Gas Accessories">
                     </div>
                     <h3>Accessories</h3>
                     <p>Regulators, hoses, and other essentials</p>
@@ -175,7 +175,7 @@
                 </a>
                 <a href="products.html#safety" class="category-card">
                     <div class="category-img">
-                        <img src="https://images.unsplash.com/photo-1581094271901-8022df4466f9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Safety Equipment">
+                        <img src="./assets/images/gas4.jpg" alt="Safety Equipment">
                     </div>
                     <h3>Safety Equipment</h3>
                     <p>Detectors and protective gear</p>
