--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <!-- Product 3 -->
                 <div class="product-card">
                     <div class="product-img">
-                        <img src="./assets/images/gas6" alt="Portable Gas Stove">
+                        <img src="./assets/images/gas2.jpg" alt="Portable Gas Stove">
                         <div class="product-actions">
                             <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                             <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
