--- a/products/gas-cylinder-products/heavy-duty-gas-cylinder-50kg.html
+++ b/products/gas-cylinder-products/heavy-duty-gas-cylinder-50kg.html
@@ -6,7 +6,7 @@
     <title>Heavy Duty Gas Cylinder - 50kg | RonVick Gas Service Limited</title>
     <meta name="description" content="Premium heavy duty 50kg gas cylinder for industrial use. Certified safety standards with free delivery in Kasana Luwero.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/assets/css/product.css">
+    <link rel="stylesheet" href="/assets/css/heavy-duty-gas-cylinder-50kg.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
