--- a/products/products-lpg.html
+++ b/products/products-lpg.html
@@ -6,7 +6,7 @@
     <title>LPG Gas Cylinders | RonVick Gas Service Limited</title>
     <meta name="description" content="Browse our selection of high-quality LPG gas cylinders for home and commercial use. Various sizes available with free delivery in Kasana Luwero.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/category.css">
+    <link rel="stylesheet" href="../assets/css/products-lpg.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
