--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 
                 <div class="nav-links" id="navLinks">
                     <a href="index.html" class="active">Home</a>
-                    <a href="products.html">Products</a>
+                    <a href="./products/index.html">Products</a>
                     <a href="services.html">Services</a>
                     <a href="about.html">About</a>
                     <a href="contact.html">Contact</a>
