--- a/products/products-lpg.html
+++ b/products/products-lpg.html
@@ -301,6 +301,6 @@
     
     <!-- Mobile Bottom Nav (same as product page) -->
 
-    <script src="assets/js/category.js"></script>
+    <script src="../assets/js/category.js"></script>
 </body>
 </html>
