--- a/products/index.html
+++ b/products/index.html
@@ -353,7 +353,7 @@
                                 <span class="product-badge best-seller">Best Seller</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Industrial Gas Cylinder">
+                                <img src="../assets/images/gas1.jpg" alt="Industrial Gas Cylinder">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -386,7 +386,7 @@
                                 <span class="product-badge new">New</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Regulator">
+                                <img src="../assets/images/Gas cylinder LPG bottle regulator.jpg" alt="Gas Regulator">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -415,7 +415,7 @@
                         <!-- Product 3 -->
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1611273426858-450d0e7b9b0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Portable Gas Stove">
+                                <img src="../assets/images/gas4.jpg" alt="Portable Gas Stove">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -448,7 +448,7 @@
                                 <span class="product-badge discount">-15%</span>
                             </div>
                             <div class="product-img">
-                                <img src="https://images.unsplash.com/photo-1581094271901-8022df4466f9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Detector">
+                                <img src="../assets/images/CEM Gas Leak Detector Pro in Tools & Hardware _ Hand Tools _ Measuring & Levels.jpg" alt="Gas Detector">
                                 <div class="product-actions">
                                     <button class="quick-view" title="Quick View"><i class="fas fa-eye"></i></button>
                                     <button class="add-to-wishlist" title="Add to Wishlist"><i class="far fa-heart"></i></button>
@@ -1212,6 +1212,6 @@
         </div>
     </div>
 
-    <script src="assets/js/products.js"></script>
+    <script src="../assets/js/products/products.js"></script>
 </body>
 </html>
