--- a/products/index.html
+++ b/products/index.html
@@ -348,7 +348,7 @@
                     <!-- Products Grid -->
                     <div class="products-grid" id="productsGrid">
                         <!-- Product 1 -->
-                        <div class="product-card">
+                        <a href="../products/gas-cylinder-products/heavy-duty-gas-cylinder-50kg.html" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge best-seller">Best Seller</span>
                             </div>
@@ -378,10 +378,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 2 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge new">New</span>
                             </div>
@@ -410,10 +410,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 3 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="../assets/images/gas4.jpg" alt="Portable Gas Stove">
                                 <div class="product-actions">
@@ -440,10 +440,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 4 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge discount">-15%</span>
                             </div>
@@ -473,10 +473,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 5 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Oxygen Cylinder">
                                 <div class="product-actions">
@@ -502,10 +502,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 6 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Cylinder Cart">
                                 <div class="product-actions">
@@ -531,10 +531,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 7 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge new">New</span>
                             </div>
@@ -564,10 +564,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 8 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Hose">
                                 <div class="product-actions">
@@ -593,10 +593,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 9 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge best-seller">Best Seller</span>
                             </div>
@@ -625,10 +625,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 10 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Burner">
                                 <div class="product-actions">
@@ -655,10 +655,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 11 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge discount">-20%</span>
                             </div>
@@ -688,10 +688,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 12 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="https://images.unsplash.com/photo-1581094271901-8022df4466f9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Heater">
                                 <div class="product-actions">
@@ -717,10 +717,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 13 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge new">New</span>
                             </div>
@@ -749,10 +749,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 14 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Adapter">
                                 <div class="product-actions">
@@ -778,10 +778,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 15 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge best-seller">Best Seller</span>
                             </div>
@@ -811,10 +811,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 16 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="https://images.unsplash.com/photo-1581094271901-8022df4466f9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Mask">
                                 <div class="product-actions">
@@ -840,10 +840,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 17 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge discount">-10%</span>
                             </div>
@@ -873,10 +873,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 18 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="https://images.unsplash.com/photo-1581092918056-0c4c3acd3789?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Valve">
                                 <div class="product-actions">
@@ -902,10 +902,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 19 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge new">New</span>
                             </div>
@@ -934,10 +934,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 20 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="https://images.unsplash.com/photo-1581094271901-8022df4466f9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Alarm">
                                 <div class="product-actions">
@@ -963,10 +963,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 21 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="https://images.unsplash.com/photo-1635070041078-e363dbe005cb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Cylinder">
                                 <div class="product-actions">
@@ -992,10 +992,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 22 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge discount">-15%</span>
                             </div>
@@ -1025,10 +1025,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 23 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-img">
                                 <img src="https://images.unsplash.com/photo-1611273426858-450d0e7b9b0e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="Gas Water Heater">
                                 <div class="product-actions">
@@ -1054,10 +1054,10 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
 
                         <!-- Product 24 -->
-                        <div class="product-card">
+                        <a href="" class="product-card">
                             <div class="product-badges">
                                 <span class="product-badge best-seller">Best Seller</span>
                             </div>
@@ -1086,7 +1086,7 @@
                                 </div>
                                 <button class="add-to-cart">Add to Cart</button>
                             </div>
-                        </div>
+                        </a>
                     </div>
 
                     <!-- Pagination -->
