--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 </div>
             </div>
             <div class="section-footer">
-                <a href="products.html" class="btn btn-outline">View All Products</a>
+                <a href="./products/index.html" class="btn btn-outline">View All Products</a>
             </div>
         </div>
     </section>
@@ -518,11 +518,11 @@
 
     <!-- Mobile Bottom Nav -->
     <div class="mobile-bottom-nav">
-        <a href="index.html" class="mobile-nav-item active">
+        <a href="./index.html" class="mobile-nav-item active">
             <i class="fas fa-home"></i>
             <span>Home</span>
         </a>
-        <a href="products.html" class="mobile-nav-item">
+        <a href="./products/index.html" class="mobile-nav-item">
             <i class="fas fa-shopping-bag"></i>
             <span>Products</span>
         </a>
@@ -530,11 +530,11 @@
             <i class="fas fa-phone"></i>
             <span>Call Us</span>
         </a>
-        <a href="contact.html" class="mobile-nav-item">
+        <a href="./contact.html" class="mobile-nav-item">
             <i class="fas fa-envelope"></i>
             <span>Contact</span>
         </a>
-        <a href="#" class="mobile-nav-item cart-icon">
+        <a href="./cart/index.html" class="mobile-nav-item cart-icon">
             <i class="fas fa-shopping-cart"></i>
             <span>Cart</span>
             <span class="cart-count">0</span>
