--- a/products/index.html
+++ b/products/index.html
@@ -1179,11 +1179,11 @@
 
     <!-- Mobile Bottom Nav -->
     <div class="mobile-bottom-nav">
-        <a href="index.html" class="mobile-nav-item">
+        <a href="../index.html" class="mobile-nav-item">
             <i class="fas fa-home"></i>
             <span>Home</span>
         </a>
-        <a href="products.html" class="mobile-nav-item active">
+        <a href="../products/index.html" class="mobile-nav-item active">
             <i class="fas fa-shopping-bag"></i>
             <span>Products</span>
         </a>
@@ -1191,11 +1191,11 @@
             <i class="fas fa-phone"></i>
             <span>Call Us</span>
         </a>
-        <a href="contact.html" class="mobile-nav-item">
-            <i class="fas fa-envelope"></i>
-            <span>Contact</span>
+        <a href="../signup.html" class="mobile-nav-item">
+            <i class="fas fa-user"></i>
+            <span>Sign up</span>
         </a>
-        <a href="#" class="mobile-nav-item cart-icon">
+        <a href="../cart/index.html" class="mobile-nav-item cart-icon">
             <i class="fas fa-shopping-cart"></i>
             <span>Cart</span>
             <span class="cart-count">0</span>
