Added signup feature

--- a/index.html
+++ b/index.html
@@ -530,9 +530,9 @@
             <i class="fas fa-phone"></i>
             <span>Call Us</span>
         </a>
-        <a href="./contact.html" class="mobile-nav-item">
-            <i class="fas fa-envelope"></i>
-            <span>Contact</span>
+        <a href="./signup.html" class="mobile-nav-item">
+            <i class="fas fa-user"></i>
+            <span>SignUp</span>
         </a>
         <a href="./cart/index.html" class="mobile-nav-item cart-icon">
             <i class="fas fa-shopping-cart"></i>
