--- a/products/index.html
+++ b/products/index.html
@@ -1193,7 +1193,7 @@
         </a>
         <a href="../signup.html" class="mobile-nav-item">
             <i class="fas fa-user"></i>
-            <span>Sign up</span>
+            <span>SignUp</span>
         </a>
         <a href="../cart/index.html" class="mobile-nav-item cart-icon">
             <i class="fas fa-shopping-cart"></i>
