--- a/products/gas-cylinder-products/heavy-duty-gas-cylinder-50kg.html
+++ b/products/gas-cylinder-products/heavy-duty-gas-cylinder-50kg.html
@@ -569,11 +569,11 @@
             <i class="fas fa-phone"></i>
             <span>Call Us</span>
         </a>
-        <a href="../contact.html" class="mobile-nav-item">
-            <i class="fas fa-envelope"></i>
-            <span>Contact</span>
+        <a href="../signup.html" class="mobile-nav-item">
+            <i class="fas fa-user"></i>
+            <span>SignUp</span>
         </a>
-        <a href="#" class="mobile-nav-item cart-icon">
+        <a href="../cart/index.html" class="mobile-nav-item cart-icon">
             <i class="fas fa-shopping-cart"></i>
             <span>Cart</span>
             <span class="cart-count">0</span>
