Added signup feature

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                 </div>
                 
                 <div class="nav-icons">
+                    <a href="./signup.html" class="nav-signup-icon">
+                        <i class="fas fa-user"></i>
+                        <!-- <span>SignUp</span> -->
+                    </a>
                     <div class="cart-icon">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="cart-count">0</span>
@@ -76,8 +80,8 @@
                         <h1>Premium Gas Cylinders & Accessories</h1>
                         <p>High-quality gas solutions for home and industry with free delivery in Kasana Luwero</p>
                         <div class="hero-buttons">
-                            <a href="products.html" class="btn btn-primary">Shop Now</a>
-                            <a href="contact.html" class="btn btn-secondary">Contact Us</a>
+                            <a href="./products/index.html" class="btn btn-primary">Shop Now</a>
+                            <a href="#cta-content" class="btn btn-secondary">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -330,7 +334,7 @@
     <!-- Call to Action -->
     <section class="cta">
         <div class="container">
-            <div class="cta-content">
+            <div class="cta-content" id="cta-content">
                 <h2>Need Gas Delivery?</h2>
                 <p>Order now and get free delivery on all gas cylinders within Kasana Luwero</p>
                 <div class="cta-buttons">
@@ -382,10 +386,10 @@
                         <p>"The free delivery service is a game changer! I no longer have to worry about transporting heavy gas cylinders. Highly recommend RonVick Gas."</p>
                         <div class="customer-info">
                             <div class="customer-img">
-                                <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Customer">
+                                <img src="./assets/images/macford isaiah-client-testimonial.jpeg" alt="Customer">
                             </div>
                             <div>
-                                <h4>Sarah Nalwoga</h4>
+                                <h4>Isaiah N</h4>
                                 <span>Home User</span>
                             </div>
                         </div>
@@ -478,7 +482,7 @@
                         <li><a href="products.html#industrial">Industrial Solutions</a></li>
                     </ul>
                 </div>
-                <div class="footer-col footer-contact">
+                <div class="footer-col footer-contact" id="footer-contact">
                     <h3>Contact Us</h3>
                     <ul>
                         <li>
