--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </a>
                 
                 <div class="nav-links" id="navLinks">
-                    <a href="index.html" class="active">Home</a>
+                    <a href="#" class="active">Home</a>
                     <a href="./products/index.html">Products</a>
                     <a href="services.html">Services</a>
                     <a href="about.html">About</a>
@@ -57,10 +57,10 @@
                         <i class="fas fa-user"></i>
                         <!-- <span>SignUp</span> -->
                     </a>
-                    <div class="cart-icon">
+                    <a href="./cart/index.html" class="cart-icon">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="cart-count">0</span>
-                    </div>
+                    </a>
                     <div class="hamburger" id="hamburger">
                         <div class="bar"></div>
                         <div class="bar"></div>
@@ -169,7 +169,7 @@
                     <p>Medical and industrial oxygen solutions</p>
                     <span class="shop-now">Shop Now <i class="fas fa-arrow-right"></i></span>
                 </a>
-                <a href="products.html#accessories" class="category-card">
+                <a href="./products/gas-accessories/index.html" class="category-card">
                     <div class="category-img">
                         <img src="./assets/images/product4.jpg" alt="Gas Accessories">
                     </div>
