--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <p>High-quality gas solutions for home and industry with free delivery in Kasana Luwero</p>
                         <div class="hero-buttons">
                             <a href="./products/index.html" class="btn btn-primary">Shop Now</a>
-                            <a href="#cta-content" class="btn btn-secondary">Contact Us</a>
+                            <a href="#cta-content" class="btn btn-secondary">Refill</a>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                         <p>Quality gas equipment with certified safety standards for your peace of mind</p>
                         <div class="hero-buttons">
                             <a href="products.html" class="btn btn-primary">Our Products</a>
-                            <a href="services.html" class="btn btn-secondary">Our Services</a>
+                            <a href="services.html" class="btn btn-secondary">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -153,25 +153,25 @@
                 <p>Browse our wide range of gas products and accessories</p>
             </div>
             <div class="categories-grid">
-                <a href="products.html#lpg" class="category-card">
+                <a href="./products/gas-cylinders/index.html" class="category-card">
                     <div class="category-img">
                         <img src="./assets/images/cooking gas 7.jpg" alt="LPG Cylinders">
                     </div>
-                    <h3>LPG Cylinders</h3>
+                    <h3>Full Set Cylinders</h3>
                     <p>Various sizes for home and commercial use</p>
                     <span class="shop-now">Shop Now <i class="fas fa-arrow-right"></i></span>
                 </a>
-                <a href="products.html#oxygen" class="category-card">
+                <a href="products.html#refill" class="category-card">
                     <div class="category-img">
-                        <img src="./assets/images/cooking gas 8.jpg" alt="Oxygen Cylinders">
+                        <img src="./assets/images/cooking gas 8.jpg" alt="Refill Cylinders">
                     </div>
-                    <h3>Oxygen Cylinders</h3>
-                    <p>Medical and industrial oxygen solutions</p>
-                    <span class="shop-now">Shop Now <i class="fas fa-arrow-right"></i></span>
+                    <h3>Gas Cylinders Refill</h3>
+                    <p>Have your empty gas cylinder refilled</p>
+                    <span class="shop-now">Refill Now <i class="fas fa-arrow-right"></i></span>
                 </a>
                 <a href="./products/gas-accessories/index.html" class="category-card">
                     <div class="category-img">
-                        <img src="./assets/images/product4.jpg" alt="Gas Accessories">
+                        <img src="./assets/images/accessories/cooker gas burner.jpg" alt="Gas Accessories">
                     </div>
                     <h3>Accessories</h3>
                     <p>Regulators, hoses, and other essentials</p>
@@ -179,7 +179,7 @@
                 </a>
                 <a href="products.html#safety" class="category-card">
                     <div class="category-img">
-                        <img src="./assets/images/gas4.jpg" alt="Safety Equipment">
+                        <img src="./assets/images/gas-safety-gear/Safety Gas Can (4).jpg" alt="Safety Equipment">
                     </div>
                     <h3>Safety Equipment</h3>
                     <p>Detectors and protective gear</p>
@@ -338,8 +338,8 @@
                 <h2>Need Gas Delivery?</h2>
                 <p>Order now and get free delivery on all gas cylinders within Kasana Luwero</p>
                 <div class="cta-buttons">
-                    <a href="tel:0788971271" class="btn btn-primary"><i class="fas fa-phone"></i> Call Now</a>
-                    <a href="contact.html" class="btn btn-outline">Contact Us</a>
+                    <a href="tel:0788971271" class="btn btn-primary cta-btn"><i class="fas fa-phone"></i> Call Now</a>
+                    <a href="contact.html" class="btn btn-outline cta-btn">Contact Us</a>
                 </div>
             </div>
         </div>
