--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <p>Various sizes for home and commercial use</p>
                     <span class="shop-now">Shop Now <i class="fas fa-arrow-right"></i></span>
                 </a>
-                <a href="products.html#refill" class="category-card">
+                <a href="./products/gas-refill/gas-refilling.html" class="category-card">
                     <div class="category-img">
                         <img src="./assets/images/cooking gas 8.jpg" alt="Refill Cylinders">
                     </div>
