--- a/products/gas-refill/cylinder-details.html
+++ b/products/gas-refill/cylinder-details.html
@@ -43,8 +43,8 @@
                 <div class="nav-links" id="navLinks">
                     <a href="../../index.html">Home</a>
                     <a href="../../products/index.html">Products</a>
-                    <a href="../../gas-cylinders.html">Cylinders</a>
-                    <a href="../../gas-refilling.html">Refilling</a>
+                   <!--  <a href="../../gas-cylinders.html">Cylinders</a>
+                    <a href="../../gas-refilling.html">Refilling</a> -->
                     <a href="../../services.html">Services</a>
                     <a href="../../about.html">About</a>
                     <div class="mobile-contact">
