--- a/products/gas-refill/gas-refilling.html
+++ b/products/gas-refill/gas-refilling.html
@@ -43,7 +43,7 @@
                 <div class="nav-links" id="navLinks">
                     <a href="../index.html">Home</a>
                     <a href="../products/index.html">Products</a>
-                    <a href="../gas-cylinders.html">Cylinders</a>
+                    <!-- <a href="../gas-cylinders.html">Cylinders</a> -->
                     <a href="../services.html">Services</a>
                     <a href="../gas-refilling.html" class="active">Gas Refilling</a>
                     <a href="../about.html">About</a>
