--- a/products/gas-refill/gas-refilling.html
+++ b/products/gas-refill/gas-refilling.html
@@ -906,6 +906,6 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script src="../assets/js/gas-refilling.js"></script>
+    <script src="../../assets/js/gas-refilling.js"></script>
 </body>
 </html>
