--- a/products/gas-refill/gas-refilling.html
+++ b/products/gas-refill/gas-refilling.html
@@ -43,9 +43,7 @@
                 <div class="nav-links" id="navLinks">
                     <a href="../index.html">Home</a>
                     <a href="../products/index.html">Products</a>
-                    <!-- <a href="../gas-cylinders.html">Cylinders</a> -->
                     <a href="../services.html">Services</a>
-                    <a href="../gas-refilling.html" class="active">Gas Refilling</a>
                     <a href="../about.html">About</a>
                     <a href="../contact.html">Contact</a>
                     <div class="mobile-contact">
@@ -56,6 +54,10 @@
                 </div>
                 
                 <div class="nav-icons">
+                    <a href="./signup.html" class="nav-signup-icon">
+                        <i class="fas fa-user"></i>
+                        <!-- <span>SignUp</span> -->
+                    </a>
                     <div class="cart-icon">
                         <i class="fas fa-shopping-cart"></i>
                         <span class="cart-count">0</span>
