--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <p>High-quality gas solutions for home and industry with free delivery in Kasana Luwero</p>
                         <div class="hero-buttons">
                             <a href="./products/index.html" class="btn btn-primary">Shop Now</a>
-                            <a href="#cta-content" class="btn btn-secondary">Refill</a>
+                            <a href="./products/gas-refill/index.html" class="btn btn-secondary">Refill</a>
                         </div>
                     </div>
                 </div>
